2005-06-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/jpeg-icc.[ch]: copied from lcms that reads and
	writes ICC profiles from/to JPEG files. Not yet used at all.

2005-06-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/*/*.c: use the canonical form of signal names.

2005-06-28  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpwidgetsenums.[ch]: added enum
	GimpPageSelectorTarget which can be one of { LAYERS, IMAGES }
	(suggestions for a better name welcome).

	* libgimpwidgets/gimppageselector.[ch]: added "target" property
	and a combo box to select a target. Removed GimpFrame around inner
	widgets again. Set a minimum width on the items so the "Page xxx"
	text doesn't wrap for pages smaller than 1000.

2005-06-27  Michael Schumacher  <schumaml@cvs.gnome.org>
	
	* libgimpwidgets/gimppageselector.c: fixed a typo: 
	thmbnail -> thumbnail

2005-06-27  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimppageselector.[ch]: made range API public.

2005-06-27  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppageselector.[ch]: added "Select All/None"
	buttons and a "Select Range" entry which allows entering of page
	ranges manually (e.g. "1,6,8,10-16").

2005-06-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c
	* app/widgets/gimpwidgets-constructors.c: added missing casts.

2005-06-27  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.def
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimppageselector.[ch]: new widget, GimpPageSelector
	which will be used to select which pages to open from multi-page
	documents (e.g. PS, PDF, TIFF). Work in progress!

2005-06-27  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumcombobox.[ch]: added new constructor
	gimp_enum_combo_box_new_with_model(). Also override the "model"