@@ -168,6 +168,7 @@ EXPORTS
 	gimp_option_menu_set_history
 	gimp_option_menu_set_sensitive
 	gimp_page_selector_get_n_pages
+	gimp_page_selector_get_page_label
 	gimp_page_selector_get_page_thumbnail
 	gimp_page_selector_get_selected_pages
 	gimp_page_selector_get_selected_range
@@ -178,6 +179,7 @@ EXPORTS
 	gimp_page_selector_select_page
 	gimp_page_selector_select_range
 	gimp_page_selector_set_n_pages
+	gimp_page_selector_set_page_label
 	gimp_page_selector_set_page_thumbnail
 	gimp_page_selector_unselect_all
 	gimp_page_selector_unselect_page
