@@ -1,3 +1,9 @@
+2005-06-30  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpwidgets.def
+	* libgimpwidgets/gimppageselector.[ch]: added API to set/get
+	the label for each page.
+
 2005-06-30  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/jpeg/Makefile.am
